    thanks to chrispitude for the massive cleanup in
    https://github.com/mirod/xmltwig/pull/34
    and to zostay and asb-capfan for finding typos in
    https://github.com/mirod/xmltwig/pull/29 and
    https://github.com/mirod/xmltwig/pull/33

- improved strip_att to allow more than 1 attribute to be stripped
    thanks to chrispitude for https://github.com/mirod/xmltwig/pull/37
    

3.53 - 2024-12-10 - minor maintenance release

- fixed warning from recent perl version
  See RT#155759 https://rt.cpan.org/Public/Bug/Display.html?id=155759

- fixed bug with namespaced elements in navigation

- added multiclass selectors in navigation and handler triggers
  (css style, eg elt.class1.class2)

- fixed bug with dots in element names confusing navigation
  conditions in some cases

- fixed output when a CDATA section includes a CDATA end marker
  spotted by Djibril

3.52 - 2016-11-23  - minor maintenance release

- fixed: the previous fix was buggy...

3.51 - 2016-11-23  - minor maintenance release

- fixed: failing tests when XML::XPathEngine and XML::XPath not available

3.50 - 2016-11-22  - minor maintenance release

- added: the no_xxe option to XML::Twig::new, which causes the parse 
  to fail if external entities are used (to prevent malicious XML to
  access the filesystem). 
  See RT#118097 https://rt.cpan.org/Public/Bug/Display.html?id=118097

- fixed: warning (and soon error) due to unescaped literal left braces
  in regular expressions in the code generating Twig.pm
  reported by trwyant
  https://github.com/mirod/xmltwig/issues/26

- fixed: (partial fix) implement getNamespaces in XML::Twig::XPath::Elt
  the expression doesn't crash the code, but doesn't return anything
  interesting (yet)
  reported by Nathan Glenn
  https://github.com/mirod/xmltwig/issues/12

- fixed: various spelling mistakes
  https://github.com/mirod/xmltwig/pull/24
  thanks to James McCoy for the patch

- git repo cleanup, thanks to mjg17
