@@ -24,6 +24,11 @@ CHANGES
 - improved strip_att to allow more than 1 attribute to be stripped
     thanks to chrispitude for https://github.com/mirod/xmltwig/pull/37
     
+- added HTML style aliases for positions for paste and insert_new_elt
+    beforebegin for before
+    afterbegin for first_child
+    beforeend for last_child
+    afterend for after
 
 3.53 - 2024-12-10 - minor maintenance release
 
